# Slop-Scrubber

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
config/: dataset_sites.json  rules.json
docs/: calibration-v1.md
scripts/: build_extension.py  capture_dataset.mjs  check_parity.py
src/: __init__.py  cli.py  default_rules.json
src/core/: __init__.py  parser.py  scorer.py
src/extension/: __init__.py  content.js  inject.css  manifest.json  popup.html  popup.js  scorer.js  sidebar.html  sidebar.js
src/filters/: __init__.py  metadata.py  typography.py
tests/: test_cli.py  test_feeds.py  test_metadata.py  test_scorer.js  test_scoring.py
